# lmxlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  publish.yml  release.yml
docs/: index.md
docs/api/: core.md  data.md  eval.md  experiments.md  index.md  inference.md  models.md  training.md
docs/architecture/: compiled-training.md  configurable-block.md  mlx-idioms.md  overview.md  production-optimizations.md  unified-memory.md
docs/data/: index.md
docs/devlog/: index.md
docs/experiments/: methodology.md  results.md  ttc-grokking-writeup.md
docs/getting-started/: first-training-run.md  installation.md  quickstart.md
docs/guides/: architecture-comparison.md
docs/inference/: index.md
docs/models/: index.md
docs/recipes/: index.md
docs/training/: index.md
experiments/: hyp007_results.json  hyp008_results.json  hyp009_log.txt  hyp009_results.json  hyp010_results.json  hyp011_results.json  hyp012_results.json  hyp013_results.json  hyp014_results.json  hyp015_results.json  hyp016_results.json  hyp038_results.json  pgolf_results.jsonl
infra/gcp-pgolf/: main.tf  run_experiments.sh  terraform.tfvars.example  variables.tf
memory/: MEMORY.md  anomalies.md  beliefs.md  ci-lessons.md  claude-code-craft.md  cross-references.md  decisions.md  designs.md  hypotheses.md  interfaces.md  lab-notebook.md  literature.md  patterns.md  pgolf-gpu-plan.md  pgolf-roadmap.md  releases.md  research-methodology.md  roadmap.md  scaling-book-notes.md  tech-debt.md
notebooks/: 01_architecture_tour.ipynb  02_attention_variants.ipynb  03_ssm_explained.ipynb  04_training_dynamics.ipynb  05_hybrid_architectures.ipynb  ssm_hybrids.ipynb  tour.ipynb  training.ipynb
pgolf/: KNOWLEDGE.md
pgolf/experiments/: hybrid_baselines.json  hybrid_baselines_log.txt  hyp001c_log.txt  hyp001d_log.txt  hyp006_log.txt  hyp006_results.json  hyp008_log.txt  hyp010_log.txt  hyp011_log.txt  hyp012_log.txt  hyp013_log.txt  hyp014_log.txt  hyp015_log.txt  hyp016_log.txt  hyp037_results.json  optuna_pgolf.db  pgolf_results.jsonl
pgolf/experiments/pgolf_scripts/: HYP-019b-schedule_1773911150.py  HYP-021-baseline_1773916916.py  HYP-025-optuna-t7_1773936043.py  HYP-027-stride256_1773941280.py  HYP-029-baseline_1774025363.py  HYP-036-3u-attnres_1774053229.py  HYP-039-xsa-vr_1774065488.py  HYP-039-xsa_1774064719.py  HYP-040-last2_1774068476.py  HYP-041-zloss_1774072192.py  HYP-043-focal10_1774076974.py  HYP-044-mile10_1774077852.py  HYP-044-mile10_1774078099.py  HYP-052-vnorm_1774091855.py  HYP-053-sd01_1774092683.py  HYP-054-sp2048_1774112662.py  HYP-055-mingru012_1774115842.py  HYP-055-mingru012_1774116043.py  HYP-055-mingru012_1774116256.py  HYP-055-mingru012_1774116270.py  HYP-055-mingru0_1774114437.py  HYP-055-mingru0_1774114468.py  HYP-055-mingru0_1774114481.py  HYP-057-conv01_1774122681.py  HYP-057-conv0_1774121271.py  HYP-057-conv0_1774121311.py  HYP-058-preconv4_1774123566.py  HYP-059-conv32_1774124907.py  HYP-059-conv32_1774124920.py  HYP-064-accum2_1774142149.py  HYP-065-bigram4k_1774143793.py  HYP-066-mix0001_1774146712.py  HYP-066-mix001_1774145151.py  HYP-066-mix005_1774145933.py  HYP-070-v2full_1774151831.py  HYP-071-affine_1774152835.py  HYP-072-wd005_1774153860.py  HYP-073-randomfc_1774155572.py  HYP-073-randomfc_1774155643.py  HYP-076-mlp4x_1774162884.py  (+4 more)
pgolf/infra/gcp-pgolf/: .gitignore  README.md  main.tf  validate_batch_dependent.sh
pgolf/logs_old/: 8e87d148-806d-4ec2-99fd-fc31e0a9071a.txt
pgolf/recipes/: autorun_template.py  pgolf_autorun.py  pgolf_optuna.py
pgolf/scripts/: autorun.sh  monarch_compress.py  run_batch_invariant.sh  watcher.sh
pgolf/tests/: test_autorun.py
recipes/: ablation_gpt_to_llama.py  ablation_hyp001b.py  ablation_hyp001c.py  ablation_hyp001d.py  advanced_sampling.py  analyze_experiments.py  benchmark_compile.py  checkpoint_resume.py  compare_architectures.py  compare_kv_cache.py  compare_optimizers.py  compare_schedules.py  compare_training.py  distill_model.py  evaluate_model.py  finetune_lora.py  finetune_qlora.py  hybrid_ablation.py  hybrid_activations.py  hybrid_baselines.py  hybrid_probing.py  hyp006_dropout_norm.py  hyp007_test_time_compute.py  hyp008_ssm_ttc.py  hyp009_grokking_ttc.py  hyp010_ttc_model_size.py  hyp011_token_loss_decomp.py  hyp012_ttc_cross_task.py  hyp013_entropy_predicts_ttc.py  hyp014_grokking_architectures.py  hyp015_moe_grokking_stability.py  hyp016_early_grokking_prediction.py  hyp037_commutator_defect.py  hyp038_sharpening.py  interactive_generate.py  load_pretrained.py  mup_coordinate_check.py  pgolf_autorun.py  profile_models.py  quantize_and_generate.py  (+15 more)
src/lmt_metal/: __init__.py  __main__.py  _typing.py  cli.py
src/lmt_metal/core/: __init__.py  attention.py  block.py  config.py  deltanet.py  ffn.py  lora.py  mla.py  moe.py  norm.py  position.py  qlora.py  quantize.py  registry.py
src/lmt_metal/data/: __init__.py  dataset.py  tokenizer.py
src/lmt_metal/eval/: __init__.py  metrics.py
src/lmt_metal/experiments/: __init__.py  analysis.py  profiling.py  runner.py  sweep.py
src/lmt_metal/inference/: __init__.py  sampling.py  speculative.py
src/lmt_metal/models/: __init__.py  base.py  convert.py  deepseek.py  gemma.py  gemma3.py  generate.py  gpt.py  llama.py  (+3 more)
src/lmxlab/: __init__.py  __main__.py  _typing.py  cli.py
tests/: conftest.py  test_advanced_training.py  test_analysis.py  test_architectures.py  test_behavioral.py  test_cli.py  test_convert.py  test_core.py  test_cross_reference.py  test_data.py  test_eval.py  test_experiments.py  test_flops.py  test_grpo_trainer.py  test_hyp007.py  test_inference.py  test_lora.py  test_lora_save_load.py  test_metric_callbacks.py  test_models.py  test_modular_arithmetic.py  test_mup.py  test_param_counts.py  test_profiling.py  test_qlora.py  test_quantize.py  test_sampling.py  test_training.py
(+89 files in other folders)
