[project]
name = "lmt-metal"
version = "0.1.0"
description = "Educational MLX library for transformer language models on Apple Silicon"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Michael Ellis" },
]
keywords = ["mlx", "transformers", "apple-silicon", "language-models", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.25",
    "numpy",
    "safetensors",
]

[project.optional-dependencies]
tokenizers = ["tiktoken"]
hf = ["huggingface_hub", "transformers", "datasets"]
experiments = ["mlflow-skinny"]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/michaelellis003/lmt-metal"
Repository = "https://github.com/michaelellis003/lmt-metal"
Documentation = "https://michaelellis003.github.io/lmt-metal/"

[project.scripts]
lmt-metal = "lmt_metal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmt_metal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >10s (training loops, large models)",
    "gpu: requires Apple Silicon GPU",
    "integration: end-to-end tests",
]
addopts = ["--strict-markers", "--tb=short", "-q"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["lmt_metal"]

[tool.mypy]
python_version = "3.12"
strict = true
