[project]
name = "lmxlab"
version = "0.3.1"
description = "Research platform for language model experimentation on Apple Silicon"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Michael Ellis" },
]
keywords = ["mlx", "transformers", "apple-silicon", "language-models", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.25",
    "numpy",
    "safetensors",
]

[project.optional-dependencies]
tokenizers = ["tiktoken"]
hf = ["huggingface_hub", "transformers", "datasets"]
analysis = ["matplotlib"]
experiments = ["mlflow", "optuna"]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/michaelellis003/lmxlab"
Repository = "https://github.com/michaelellis003/lmxlab"
Documentation = "https://michaelellis003.github.io/lmxlab/"
Issues = "https://github.com/michaelellis003/lmxlab/issues"
Changelog = "https://github.com/michaelellis003/lmxlab/blob/main/CHANGELOG.md"

[project.scripts]
lmxlab = "lmxlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmxlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >10s (training loops, large models)",
    "gpu: requires Apple Silicon GPU",
    "integration: end-to-end tests",
]
addopts = ["--strict-markers", "--tb=short", "-q"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["lmxlab"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "mlx.*",
    "tiktoken",
    "transformers",
    "datasets",
    "huggingface_hub",
    "mlflow.*",
    "matplotlib.*",
]
ignore_missing_imports = true
