[project]
name = "lmxlab"
version = "0.3.1"
description = "Transformer language models on Apple Silicon with MLX"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Michael Ellis" },
]
keywords = ["mlx", "transformers", "apple-silicon", "language-models", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.25",
    "numpy",
    "safetensors",
    "scipy>=1.17.1",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
tokenizers = ["tiktoken"]
hf = ["huggingface_hub", "transformers", "datasets"]
plotting = ["matplotlib"]
tracking = ["mlflow"]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "pre-commit>=4.0",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/michaelellis003/lmxlab"
Repository = "https://github.com/michaelellis003/lmxlab"
Documentation = "https://michaelellis003.github.io/lmxlab/"
Issues = "https://github.com/michaelellis003/lmxlab/issues"
Changelog = "https://github.com/michaelellis003/lmxlab/blob/main/CHANGELOG.md"

[project.scripts]
lmxlab = "lmxlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmxlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >10s (training loops, large models)",
    "gpu: requires Apple Silicon GPU",
    "integration: end-to-end tests",
]
addopts = ["--strict-markers", "--tb=short", "-q"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["lmxlab"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
# MLX is a C extension with no type stubs — many operations
# (tree_flatten, nn.Module.__call__, mx.array ops) produce
# false positives under strict mode.
disable_error_code = ["misc", "arg-type"]

[[tool.mypy.overrides]]
module = [
    "mlx.*",
    "tiktoken",
    "transformers",
    "datasets",
    "huggingface_hub",
    "mlflow.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/lmxlab/__init__.py:__version__"]
commit_message = "chore(release): {version}"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
